--- a/styles.css
+++ b/styles.css
@@ -216,13 +216,20 @@ h1#page-title {
     line-height: 1.4;
   }
 
-  .event-card .icon {
-    margin-right: 0.25rem;
+  /* Gör plats och typ starka-element inline-block på samma rad */
+  .event-card strong {
+    display: block;
+    margin-bottom: 0.3rem;
   }
 
-  .event-card strong {
+  .event-card strong:nth-of-type(1),
+  .event-card strong:nth-of-type(2) {
     display: inline-block;
-    margin-right: 0.5rem;
+    margin-right: 1rem;
+  }
+
+  .event-card .icon {
+    margin-right: 0.25rem;
   }
 
   .event-card br {
