--- a/styles.css
+++ b/styles.css
@@ -77,6 +77,7 @@ h1#page-title {
 .main-nav {
   display: flex;
   justify-content: flex-end;
+  align-items: center;
   position: relative;
   margin-bottom: 1rem;
 }
