--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,10 @@ h1#page-title {
   display: inline-block;
 }
 
+.event-line .value {
+  font-weight: normal;
+}
+
 .event-line.place-type {
   display: flex;
   gap: 2rem;
@@ -265,6 +269,10 @@ h1#page-title {
   .event-card .event-line strong {
     font-size: 0.75rem;
     font-weight: 600;
+  }
+
+  .event-card .value {
+    font-size: 0.85rem;
   }
 
   .nav-links li a {
