--- a/Styles_budget.css
+++ b/Styles_budget.css
@@ -12,7 +12,7 @@ h1#page-title {
   font-size: 1.8rem;
   margin-bottom: 1.5rem;
   color: #222;
-  text-align: center;
+  text-align: left;
 }
 
 /* === Navigering & hamburgermeny === */
